<resources>
    <string name="app_name_debug">Malime Debug</string>
    <string name="app_name_release">Malime</string>
    <string name="update_service_name">Periodic Update Service</string>
    <string name="refresh_service_name">Refresh Token Service</string>

    <string name="preference_title_crash_reporting">Crash Reporting</string>
    <string name="preference_summary_crash_reporting">Allow anonymous crash reporting?</string>
    <string name="preference_title_about_app">About App</string>
    <string name="preference_summary_about_app">View information of open source libraries used</string>
    <string name="preference_title_app_start">Application Starting Screen</string>
    <string name="preference_summary_app_start">Choose the screen to first display when application starts</string>

    <string name="service_selection_header">Select your primary tracking service</string>
    <string name="service_selection_mal">MyAnimeList</string>
    <string name="service_selection_kitsu">Kitsu</string>

    <string name="login_username">Username</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_mal_helper_text">Please login to your MyAnimeList account</string>
    <string name="login_kitsu_helper_text">Please login to your Kitsu account</string>
    <string name="login_create_mal_account">No MyAnimeList account? Create one</string>
    <string name="login_create_kitsu_account">No Kitsu account? Create one</string>
    <string name="login_failure">Failure to login, please check credentials</string>
    <string name="login_failure_username">Username cannot be empty</string>
    <string name="login_failure_email">Email cannot be empty</string>
    <string name="login_failure_password">Password cannot be empty</string>
    <string name="login_authenticating">Authenticating…</string>

    <string name="main_nav_anime">Anime</string>
    <string name="main_nav_manga">Manga</string>
    <string name="main_nav_search">Search</string>

    <string name="options_filter">Filter</string>
    <string name="options_sort">Sort</string>
    <string name="options_view_profile">View Profile</string>
    <string name="options_settings">Settings</string>
    <string name="options_log_out">Log Out</string>
    <string name="log_out_confirmation">Are you sure?</string>

    <string name="maldisplay_empty_title">No series with current filter found</string>
    <string name="maldisplay_menu_view_kitsu_profile">View series Kitsu profile</string>
    <string name="maldisplay_menu_set_status">Set series status</string>
    <string name="maldisplay_menu_set_progress">Set series progress</string>
    <string name="maldisplay_menu_set_progress_title">Enter progress</string>
    <string name="maldisplay_menu_delete">Delete series</string>
    <string name="maldisplay_confirm_status_change_title">Confirm</string>
    <string name="maldisplay_confirm_status_change_body">Are you sure you want to set %s to %s?</string>
    <string name="maldisplay_confirm_delete_body">Are you sure you want to delete %s?</string>
    <string name="maldisplay_delete_successful">%s successfully deleted</string>
    <string name="maldisplay_delete_failure">Failed to delete %s</string>
    <string name="maldisplay_progress_invalid">Invalid number entered, please try again</string>

    <string name="malitem_update_series_failure">Update to series %s failed, please try again</string>
    <string name="malitem_update_series_state_dialog_title">Change Series State To:</string>

    <string name="list_update_failure">Failed to update list</string>

    <string name="filter_dialog_title">Filter By:</string>
    <string name="filter_state_completed">Completed</string>
    <string name="filter_state_current">Current</string>
    <string name="filter_state_dropped">Dropped</string>
    <string name="filter_state_on_hold">On-Hold</string>
    <string name="filter_state_planned">Planned</string>
    <string name="filter_state_unknown">Unknown</string>
    <string name="filter_must_select">At least one filter must be selected</string>

    <string name="sort_dialog_title">Sort By:</string>
    <string name="sort_choice_default">Default</string>
    <string name="sort_choice_title">Title</string>
    <string name="sort_choice_start_date">Start Date</string>
    <string name="sort_choice_end_date">End Date</string>

    <string name="series_state_current">Current</string>
    <string name="series_state_finished">Finished</string>
    <string name="series_state_tba">TBA</string>
    <string name="series_state_unreleased">Unreleased</string>
    <string name="series_state_upcoming">Upcoming</string>
    <string name="series_state_unknown">Unknown</string>

    <string name="series_subtype_ona">ONA</string>
    <string name="series_subtype_ova">OVA</string>
    <string name="series_subtype_tv">TV</string>
    <string name="series_subtype_movie">Movie</string>
    <string name="series_subtype_music">Music</string>
    <string name="series_subtype_special">Special</string>
    <string name="series_subtype_doujin">Doujin</string>
    <string name="series_subtype_manga">Manga</string>
    <string name="series_subtype_manhua">Manhua</string>
    <string name="series_subtype_manhwa">Manhwa</string>
    <string name="series_subtype_novel">Novel</string>
    <string name="series_subtype_oel">OEL</string>
    <string name="series_subtype_oneshot">Oneshot</string>
    <string name="series_subtype_unknown">Unknown</string>

    <string name="search_text_hint">Enter search term</string>
    <string name="search_nsfw_allowed">Show NSFW</string>
    <string name="search_add_success">Series %s has been added to library</string>
    <string name="search_add_failed">Failed to add %s, please try again</string>
    <string name="search_failed_general_error">Search failed, please try again</string>
    <string name="search_failed_no_items">No items found</string>

    <string name="aboutLibraries_description_title">Malime licenses</string>
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">Malime was created using many popular third party open source libraries, and is open source itself. The source code is available at https://github.com/Chesire/Malime</string>
</resources>
