<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuMaldisplaySeriesProfile"
        android:title="@string/maldisplay_menu_view_kitsu_profile" />
    <item
        android:id="@+id/menuMaldisplaySeriesStatus"
        android:title="@string/maldisplay_menu_set_status">
        <menu>
            <item
                android:id="@+id/menuMaldisplayStateComplete"
                android:title="@string/filter_state_completed" />
            <item
                android:id="@+id/menuMaldisplayStateCurrent"
                android:title="@string/filter_state_current" />
            <item
                android:id="@+id/menuMaldisplayStateDropped"
                android:title="@string/filter_state_dropped" />
            <item
                android:id="@+id/menuMaldisplayStateOnHold"
                android:title="@string/filter_state_on_hold" />
            <item
                android:id="@+id/menuMaldisplayStatePlanned"
                android:title="@string/filter_state_planned" />
        </menu>
    </item>
    <item
        android:id="@+id/menuMaldisplaySeriesProgress"
        android:title="@string/maldisplay_menu_set_progress" />
    <item
        android:id="@+id/menuMaldisplaySeriesDelete"
        android:title="@string/maldisplay_menu_delete" />
</menu>
