<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuOptionsFilter"
        android:icon="@drawable/ic_filter_list_black"
        android:title="@string/options_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuOptionsSort"
        android:icon="@drawable/ic_sort_black"
        android:title="@string/options_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuOptionsViewProfile"
        android:title="@string/options_view_profile" />
    <item
        android:id="@+id/menuOptionsSettings"
        android:title="@string/options_settings" />
    <item
        android:id="@+id/menuOptionsLogOut"
        android:title="@string/options_log_out" />
</menu>
