<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.chesire.malime.view.search.SearchViewModel" />

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:id="@+id/fragmentSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentSearchSearchTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragmentSearchSearchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_text_hint"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:text="@={vm.params.searchText}" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/fragmentSearchOptionChoices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragmentSearchSearchTextLayout"
            android:checkedButton="@+id/fragmentSearchOptionAnimeChoice"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fragmentSearchOptionAnimeChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/main_nav_anime" />

            <RadioButton
                android:id="@+id/fragmentSearchOptionMangaChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/main_nav_manga" />
        </RadioGroup>

        <!-- Need to find some way for this item to work -->
        <CheckBox
            android:id="@+id/fragmentSearchOptionNsfwAllowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragmentSearchOptionChoices"
            android:layout_margin="8dp"
            android:checked="@{vm.params.nsfwEnabled}"
            android:text="@string/search_nsfw_allowed"
            android:visibility="gone" />

        <View
            android:id="@+id/fragmentSearchHeaderDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/fragmentSearchOptionNsfwAllowed"
            android:background="@android:color/darker_gray" />

        <ProgressBar
            android:id="@+id/fragmentSearchLoadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="@{vm.params.searching ? View.VISIBLE : View.INVISIBLE}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragmentSearchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragmentSearchHeaderDivider" />
    </RelativeLayout>
</layout>
